# hsbg_parser

./: README.md  compare_players.py  parser.py  parser_all_players.py  parser_selenium_parasha.py  pyproject.toml
data/: hs_bg_api_leaderboard_async.xlsx  players_list.xlsx
